Fixed the annoying button alignment issue

--- a/src/main/resources/seng202/team4/view/TabViewStyle.css
+++ b/src/main/resources/seng202/team4/view/TabViewStyle.css
@@ -71,6 +71,7 @@
 
 .button:hover {
     -fx-background-color: #66d9ff;
+    -fx-alignment: center;
 }
 
 .button:pressed {
